# IndexedBuffer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/indexed/: buffer.h  chrono-snap.h  database.h  filesystem.h
src/: CMakeLists.txt  buffer.cpp  chrono-snap.cpp  database.cpp  filesystem.cpp
test/: CMakeLists.txt  buffer-fixture.h  buffer-test.cpp  chrono-snap-test.cpp  database-fixture.h  database-test.cpp  filesystem-fixture.h  filesystem-test.cpp
